# bazel-go-mockery

./: .gitignore  BUILD.bazel  WORKSPACE  api.go  main_test.go
