package(default_visibility = ["//visibility:public"])

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@bazel_mockery//:gomockery.bzl", "go_mockery", "go_mockery_without_library")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

gazelle(name = "gazelle")
# gazelle:prefix github.com/chickenandpork/bazel-go-mockery

go_mockery(
    src = ":bazel-go-mockery_lib",
    importpath = "github.com/chickenandpork/bazel-go-mockery",
    interfaces = ["MagicAPI"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "bazel-go-mockery_test",
    srcs = ["main_test.go"],
    embed = [":bazel-go-mockery_lib", ":go_default_mocks"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//mock",
    ],
)

go_library(
    name = "bazel-go-mockery_lib",
    srcs = ["api.go"],
    importpath = "github.com/chickenandpork/bazel-go-mockery",
)
